--- a/Homework 05/index.html
+++ b/Homework 05/index.html
@@ -65,7 +65,7 @@
 
     	    <div class="main">
 
-                    <form action="/">
+                    <form action="#">
                 	
                         <div class="background"><button class="LoginF"></button></div>
 
@@ -77,25 +77,25 @@
 
                         <div class="hr_2"></div>
 
-                        <input type="text" name="profile" class="first_name" placeholder="First Name">
+                        <input type="text" name="first_name" class="first_name" placeholder="First Name">
 
-                        <input type="text" name="profile" class="last_name" placeholder="Last Name">
+                        <input type="text" name="last_name" class="last_name" placeholder="Last Name">
 
-                        <input type="email" name="profile" class="email" placeholder="Email Address">
+                        <input type="email" name="email" class="email" placeholder="Email Address">
 
-                        <input type="password" name="profile" class="passphrase" placeholder="Choose Password">
+                        <input type="password" name="passphrase" class="passphrase" placeholder="Choose Password">
 
-                        <input type="password" name="profile" class="submit" placeholder="Password Confirm">
+                        <input type="password" name="submit" class="submit" placeholder="Password Confirm">
 
                         <div class="send">
                         	
-                            <input type="checkbox" name="profile" class="check">
+                            <input type="checkbox" name="tips" class="check">
                             <span>Send me Youbike updates and tips</span>
 
                         </div>
 
                         <div class="create">
-                            <input type="submit" value="Create my Account" name="profile" class="account">
+                            <input type="submit" value="Create my Account" name="account" class="account">
                         </div>
 
                     </form>
