--- a/Hw 05 table/index.html
+++ b/Hw 05 table/index.html
@@ -49,7 +49,7 @@
             	
             	
             	<td rowspan="2"></td>
-            	<td class="white"></td>
+            	<td class="white_6"></td>
             </tr>
 
             <tr>
@@ -99,7 +99,7 @@
             	<td class="white"></td>
             	<td class="white"></td>
             	<td class="white"></td>
-            	<td class="white"></td>
+            	<td class="white_6"></td>
             </tr>
 
         </div>
